fixed fonts display on mobile

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,3 +1,37 @@
+@font-face {
+      font-family: GilroyRegular;
+      src: url('/fonts/Gilroy-Regular.eot');
+      src: url('/fonts/Gilroy-Regular.woff2') format('woff2'),
+            url('/fonts/Gilroy-Regular.ttf') format('truetype');
+}
+
+@font-face {
+      font-family: GilroyMedium;
+      src: url('/fonts/Gilroy-Medium.eot');
+      src: url('/fonts/Gilroy-Medium.woff2') format('woff2'),
+            url('/fonts/Gilroy-Medium.ttf') format('truetype');
+}
+
+@font-face {
+      font-family: GilroyBold;
+      src:  url('/fonts/Gilroy-Bold.eot');
+      src:  url('/fonts/Gilroy-Bold.woff2') format('woff2'),
+            url('/fonts/Gilroy-Bold.ttf') format('truetype');
+}
+
+@font-face {
+      font-family: GilroyExtrabold;
+      src: url('/fonts/Gilroy-Extrabold.eot');
+      src: url('/fonts/Gilroy-Extrabold.woff2') format('woff2'),
+            url('/fonts/Gilroy-Extrabold.ttf') format('truetype');
+}
+
+@font-face {
+      font-family: TavolgaFree;
+      src: url('/fonts/Tavolga.eot');
+      src: url('/fonts/Tavolga-Free.ttf') format('truetype');
+}
+
 @pink-color: rgb(235, 168, 177);
  @cherry-color: rgb(130, 19, 40);
  @darker-cherry-color: rgb(119, 11, 29);
@@ -52,35 +86,6 @@
       --el-height: 438px;
       --before: 400px;
       --after: 420px;
-}
-
-@font-face {
-      font-family: GilroyRegular;
-      src: url('/fonts/Gilroy-Regular.woff2') format('woff2'),
-      url('/fonts/Gilroy-Regular.ttf') format('truetype');
-}
-
-@font-face {
-      font-family: GilroyMedium;
-      src: url('/fonts/Gilroy-Medium.woff2') format('woff2'),
-      url('/fonts/Gilroy-Medium.ttf') format('truetype');
-}
-
-@font-face {
-      font-family: GilroyBold;
-      src: url('/fonts/Gilroy-Bold.woff2') format('woff2'),
-      url('/fonts/Gilroy-Bold.ttf') format('truetype');
-}
-
-@font-face {
-      font-family: GilroyExtrabold;
-      src: url('/fonts/Gilroy-Extrabold.woff2') format('woff2'),
-      url('/fonts/Gilroy-Extrabold.ttf') format('truetype');
-}
-
-@font-face {
-      font-family: TavolgaFree;
-      src: url('/fonts/Tavolga-Free.ttf') format('truetype');
 }
 
 .container {
